--- a/style/style.css
+++ b/style/style.css
@@ -135,3 +135,8 @@
 .doanvancard4{
     text-align: center;
 }
+.fa-facebook-square{
+    padding: 10px;
+}.divicon{
+    border-top: black   solid 2px;
+}
