--- a/style/style.css
+++ b/style/style.css
@@ -140,3 +140,11 @@
 }.divicon{
     border-top: black   solid 2px;
 }
+.divoverlay{
+    position: relative;
+}
+.texttronghinh{
+    position:absolute;
+    margin-top: -40px;
+    padding: 10px;
+}
