--- a/style/style.css
+++ b/style/style.css
@@ -148,3 +148,18 @@
     margin-top: -40px;
     padding: 10px;
 }
+.anhauthor{
+    border-radius: 50%;
+    width:70px
+}
+.khoiauthoer{
+    padding: 20px;
+    
+}
+.nutbaogia{
+    display: block;
+    margin-left: 5px;
+}
+.div3cardcongaythang{
+    
+}
