--- a/style/style.css
+++ b/style/style.css
@@ -164,3 +164,12 @@
     padding-top: 30px;
     background-color: white;
 }
+.doanvancardreview{
+    text
+}
+.cardreview{
+
+}
+.thebocmuiten{
+    margin-bottom: 40px;
+}
