--- a/style/style.css
+++ b/style/style.css
@@ -171,5 +171,16 @@
 
 }
 .thebocmuiten{
-    margin-bottom: 40px;
+    margin-bottom: 90px;
+}
+.anhdev{
+    border-radius: 50%;
+    height: 40px;
+    width: auto;
+    margin-top: 30px;
+
+}
+.cardreviewthongtin{
+    float: right;
+    
 }
