--- a/style/style.css
+++ b/style/style.css
@@ -184,3 +184,38 @@
     float: right;
     
 }
+.thebochinhtron button{
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    margin-top: 50px;
+}
+.khoianhcontact img{
+    height: 450px;
+    width: auto;
+}
+.khoicontactuss{
+    margin-top: 50px;  
+}
+.khoicontactuss row{
+    background-color: blue;
+}
+.footer{
+    margin-top: 60px;
+}
+.footer .row .col-md-4 i{
+    padding: 10px;
+    display: inline; 
+}
+.footer .row .nutsendme{
+    margin-top: 20px;
+    width: 40%;
+    border-radius: 10px;
+    height: auto;
+}
+.row{
+    padding: 10px;
+}
+.pleasenote{
+    margin-top: 30px;
+}
